[project]
name = "pmpml-gtfs"
version = "0.0.1"
description = "GTFS generation scripts for PMPML (Pune)"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT-0"}
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "polyline (>=2.0.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
